# SixPair

./: CMakeLists.txt  README.md  SixPair++.kdev4  main.cpp
.kdev4/: SixPair++.kdev4  _custom.kdev4
